<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginpagebgrnd2"
    tools:context=".AddRecordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update record"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_margin="30dp">

        </TextView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="349dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <EditText
                android:id="@+id/heart_rate_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/heart_rate"
                android:drawablePadding="8dp"
                android:hint="Heart Rate"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/diastolic_pressure_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/heart_rate"
                android:drawablePadding="8dp"
                android:hint="Diastolic Pressure"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/systolic_pressure_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/heart_rate"
                android:drawablePadding="8dp"
                android:hint="Systolic Pressure"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#000000" />
            <EditText
                android:id="@+id/date_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/heart_rate"
                android:drawablePadding="8dp"
                android:inputType="date"
                android:hint="DD-MM-YY"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#000000" />
            <EditText
                android:id="@+id/time_edit_text"
                android:layout_width="match_parent"
                android:inputType="time"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/heart_rate"
                android:drawablePadding="8dp"
                android:hint="HH:MM"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/heart_rate"
                android:drawablePadding="8dp"
                android:hint="comment"
                android:maxLength="20"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <Button
                android:id="@+id/add_record_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#242424"
                android:text="Update Record"
                android:textAppearance="?android:textAppearanceMedium" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>