<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:background="@drawable/homepagebg"
    android:orientation="vertical"
    android:id="@+id/homepage">
    <TextView
        android:id="@+id/usernametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="#000000"
        android:padding="20dp"
        android:layout_marginTop="20sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2.8"
        android:padding="5dp"
        android:gravity="center">
        <LinearLayout
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:ignore="Suspicious0dp">
            <androidx.cardview.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/add_cardview"
                android:layout_margin="15dp"
                android:layout_weight="1"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_width="0dp"
                android:backgroundTint="#f0f0f0"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:src="@drawable/add_icon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:padding="10dp"
                        android:background="@drawable/circle_background_add"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Add Records"
                        android:layout_margin="20dp"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textStyle="bold"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:backgroundTint="#f0f0f0"
                android:id="@+id/records_cardview"
                android:layout_margin="15dp"
                android:layout_weight="1"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:background="@drawable/circle_background_list"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:padding="10dp"
                        android:src="@drawable/list_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="View Records"
                        android:gravity="center"
                        android:layout_margin="20dp"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textStyle="bold"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:ignore="Suspicious0dp">
            <androidx.cardview.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:backgroundTint="#f0f0f0"
                android:id="@+id/profile_cardview"
                android:layout_margin="15dp"
                android:layout_weight="1"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:background="@drawable/rectangle_background_profile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:padding="10dp"
                        android:src="@drawable/profile_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Profile"
                        android:layout_margin="20dp"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textStyle="bold"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:backgroundTint="#f0f0f0"
                android:id="@+id/logout_cardview"
                android:layout_margin="15dp"
                android:layout_weight="1"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:background="@drawable/circle_background_logout"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:padding="10dp"
                        android:src="@drawable/logout_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Logout"
                        android:layout_margin="20dp"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textStyle="bold"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>