<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".SignupPage"
    android:id="@+id/signuppage"
    android:background="@drawable/loginpagebgrnd2">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext"
        tools:ignore="MissingConstraints">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="24dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="User"
            android:textColor="#000000"
            android:textAppearance="?android:textAppearanceLarge"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textColor="#000000"
            android:textAppearance="?android:textAppearanceLarge"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="Name"
            android:padding="15dp"
            android:background="@drawable/custom_edittext"
            android:textColorHint="#000000"
            android:textColor="#000000"/>

<!--        <EditText-->
<!--            android:id="@+id/user_signup"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_margin="10dp"-->
<!--            android:drawableLeft="@drawable/person"-->
<!--            android:drawablePadding="8dp"-->
<!--            android:hint="Username"-->
<!--            android:padding="10dp"-->
<!--            android:background="@drawable/custom_edittext"-->
<!--            android:textColorHint="#000000"-->
<!--            android:textColor="#000000"/>-->
        <EditText
            android:id="@+id/email_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="8dp"
            android:hint="Email"
            android:padding="10dp"
            android:background="@drawable/custom_edittext"
            android:textColorHint="#000000"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/password_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:hint="Password"
            android:padding="10dp"
            android:background="@drawable/custom_edittext"
            android:textColorHint="#000000"
            android:textColor="#000000"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Sign Up"
            android:backgroundTint="#242424"
            android:textAppearance="?android:textAppearanceMedium"
            android:id="@+id/btn_signup"
            />
    </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>